Fix about text overflow in profile modal.

--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -325,7 +325,7 @@ img.chathead {height: 2ex; width: auto;}
 .user-details-main img{ width: 100px; height: 100px; object-fit: contain; border-radius: 50%; margin-bottom: 1.4rem;}
 .user-details-main h3{ width: 100%; display: inline-block; margin: 0; font-size: 30px; font-weight: bold; color: #000;}
 .user-details-main span{ width: 100%; display: inline-block; margin: 20px 0 25px 0px; font-size: 22px; font-weight: 600; color: #000;}
-.user-details-main p{ width: 100%; display: inline-block; margin: 0 0 80px 0; font-size: 18px; font-weight: 500; color: #000; text-align: left; line-height: normal;}
+.user-details-main p{ width: 100%; display: inline-block; margin: 0 0 80px 0; font-size: 18px; font-weight: 500; color: #000; text-align: left; line-height: normal; overflow-wrap: anywhere;}
 .user-details-main .edit-button-main .edit-btn{ text-decoration: none; color: #000;font-size: 18px; background: #dddddd; border: 1px solid #7e7e7e; padding: 9px 35px; outline: none; line-height: normal; font-weight: 600; border-radius: 3px; margin-right: 15px;}
 .user-details-main .edit-button-main .close-btn{ text-decoration: none; color: #fff;font-size: 18px; background: #cf2a27; border: 1px solid #7e7e7e; padding: 9px 35px; outline: none; line-height: normal; font-weight: 600; border-radius: 3px;}
 
